syntax = "proto3";
option csharp_namespace = "CurrencyGrpc";

service Currency{
	rpc GetUserCurrencyById(GetUserCurrencyByIdRequest) returns (GetUserCurrencyByIdResponse);
}

message GetUserCurrencyByIdRequest{
	int32 user_id = 1;
}

message GetUserCurrencyByIdResponse{
	repeated CurrencyModel currencies = 1;
}

message CurrencyModel{
	string name = 1;
	double rate = 2;
}